2008-11-06  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background.c (create_pattern), (repeat), (repeat_x),
	(repeat_y), (ccss_background_fill):
	More defensive coding.

2008-11-06  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background-parser.c (bg_position_parse):
	* ccss/ccss-background.c (ccss_background_fill):
	* ccss/ccss-parser.c (property_cb):
	* ccss/ccss-property.c (ccss_property_parse_spec):
	* ccss/ccss-property.h:
	* ccss/ccss-stylesheet.c (ccss_stylesheet_query):
	Review FIXME tags related to property inheritance.

2008-11-06  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-stylesheet.c (query_type_r), (query_shallow),
	(inherit_container_style), (query_container_r),
	(ccss_stylesheet_query):
	Basic support for inheriting style from the container.

2008-11-05  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-selector-group.c (traverse_merge),
	(ccss_selector_group_merge_as_base):
	* ccss/ccss-selector-group.h:
	* ccss/ccss-stylesheet.c (fix_dangling_selectors),
	(ccss_stylesheet_query):
	* doc/tmpl/function.sgml:
	Remove unused code.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-function.h:
	* doc/ccss-docs.sgml:
	* doc/ccss-sections.txt:
	* doc/tmpl/function.sgml:
	* doc/tmpl/selector_group.sgml:
	Update docs.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/style.sgml:
	* doc/tmpl/stylesheet.sgml:
	* examples/example-2.c (main):
	Cleanup after API change.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-block.h:
	* ccss/ccss-color.c:
	* ccss/ccss-function-priv.h:
	* ccss/ccss-function.c:
	* ccss/ccss-function.h:
	* ccss/ccss-image.c:
	* ccss/ccss-parser.c:
	* ccss/ccss-parser.h:
	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c:
	* ccss/ccss-selector-group.h:
	* ccss/ccss-selector.c:
	* ccss/ccss-selector.h:
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.h: