@@ -1,5 +1,9 @@
 2008-11-06  Robert Staudinger  <robsta@gnome.org>
 
+	* ccss/ccss-background.c (ccss_background_fill): gracefully handle unset background image coming from built-ins.
+
+2008-11-06  Robert Staudinger  <robsta@gnome.org>
+
 	* ccss/ccss-background.c (create_pattern), (repeat), (repeat_x),
 	(repeat_y), (ccss_background_fill):
 	More defensive coding.
